--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -4,13 +4,29 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+/* HEADINGS */
+
 .header--main {
     font-weight: normal;
     font-size: 50px;
     color: #fff;
 }
 
+.header--secondary {
+    color: #fff;
+    font-weight: 300;
+    font-size: 42px;
+}
+
+.header--sub-header {
+    color: grey;
+    font-size: 21px;
+}
+
+/* LINKS */
+
 .link--cta {
-    font-size: 50px;
+    font-size: 16px;
     color: aquamarine;
 }
+
